--- a/src/data/projects/aripple.mdx
+++ b/src/data/projects/aripple.mdx
@@ -38,25 +38,45 @@ Despite the growing number of creator platforms, none fully serve the needs of b
   </Gray>
 </div>
 
----
-
-# Key Design Insights
-
-1. <Green>User-led discovery:</Green> Inspired by Behance + Pinterest, Pearl encourages
-   exploration by showcasing curated and trending works on the homepage.
-
-2. <Green>Ceator-first structure: </Green> Artist pages are treated like digital
-   portfolios, with customizable themes and post types.
+## Competitive Analysis
 
 <div className="flex flex-col gap-5">
   <Image
-    src="/images/mdx/aripple/aripple-sketch.png"
-    alt="ARipple userflow brainstorming"
+    src="/images/mdx/aripple/aripple-CompetitveAnalysis.png"
+    alt="Competitive Analysis chart for ARIPPLE"
     width={1000}
     height={600}
     draggable={false}
   />
-  <Gray>Layout of my first iteration of design.</Gray>
+  <Gray>
+    A chart where I summarized pros and cons of all commonly-used platforms by
+    artists and how ARipple can bridge the gaps.
+  </Gray>
 </div>
 
-> Page in development...Check in later!
+---
+
+# Key Design Snapshots (WIP)
+
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/aripple/aripple-sketch.png"
+    alt="ARipple web design snapshot"
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>
+    Iterations of my prototype design, divided by versions and page sections.
+  </Gray>
+</div>
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/aripple/aripple-designSystem.png"
+    alt="ARipple design system"
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>ARipple's Design System and component library.</Gray>
+</div>
