--- a/src/data/projects/pearl.mdx
+++ b/src/data/projects/pearl.mdx
@@ -4,4 +4,53 @@ import Image from "next/image";
 
 > A community platform blending art, technology, and connection.
 
-> Page in development...Check in later!
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/pearl/pearl_info.svg"
+    alt="Social media handles for Pearl"
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+</div>
+
+<div className="flex flex-col gap-5 mb-5">
+  <video autoPlay muted loop playsInline>
+    <source src="/videos/pearl_mascot.webm" type="video/webm" />
+    <source src="/videos/pearl_mascot.mp4" type="video/mp4" />
+  </video>
+  <Gray>After Effect animation for Pearl's mascot</Gray>
+</div>
+
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/pearl/product_doodles.png"
+    alt="My drawing for Pearl"
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>Product art designs for Pearl's Kickstarter project</Gray>
+</div>
+
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/pearl/design_system.png"
+    alt="My drawing for Pearl"
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>Maintaining a design system (WIP)</Gray>
+</div>
+
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/pearl/overview.png"
+    alt="My drawing for Pearl"
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>Website design in progress</Gray>
+</div>
