--- a/src/data/projects/nord.mdx
+++ b/src/data/projects/nord.mdx
@@ -1,3 +1,61 @@
 import Image from "next/image";
 
-> Page in development...Check in later!
+# When design meets consulting
+
+## The challenge was twofold:
+
+1.  <Green>Visual Identity</Green> – The old site no longer reflected the club’s
+    growth, professionalism, or the caliber of its members and projects.
+2.  <Green>Usability & Maintenance</Green> – The site lacked clarity for visitors
+    and was difficult for the team to update.
+
+## Rebranding & Redesign
+
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/nord/brand_change.png"
+    alt=""
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>
+    Rebranding from a casual brand to a more professional and modern look
+  </Gray>
+</div>
+
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/nord/sitemap.png"
+    alt="Sitemap for Nord"
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>Sitemap and user flow planning</Gray>
+</div>
+
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/nord/wipdesign.png"
+    alt="Figma mockups for Nord"
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>
+    Figma mockups of several key pages: from wireframe to colourful and
+    contentful prototypes
+  </Gray>
+</div>
+
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/nord/designSystem.png"
+    alt="Design System for Nord"
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>Design System 0 -> 1 (growing)</Gray>
+</div>
