--- a/src/data/projects/nsd.mdx
+++ b/src/data/projects/nsd.mdx
@@ -1,3 +1,58 @@
 import Image from "next/image";
 
-> Page in development...Check in later!
+# Representational Topology Analysis – Research in Farivar Lab
+
+During my research assistantship in Prof. Reza Farivar’s lab at McGill, I worked on applying advanced computational methods to understand how the brain encodes visual information.
+
+My focus was on <Green>Representational Similarity Analysis (RSA)</Green> and <Green>Representational Topology Analysis (RTA)</Green> using the <Link href="https://naturalscenesdataset.org">Natural Scenes Dataset (NSD)</Link>, one
+of the largest publicly available fMRI datasets.
+
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/nsd/brain.png"
+    alt="Brain mesh with ROIs highlighted in colours"
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>
+    Brain mesh with 180 region of interest highlighted in colours. Seven of them
+    in visual streams were the focus for RSA & RTA
+  </Gray>
+</div>
+
+# Key Contributions
+
+- Automated data pipelines for Natural Scene Dataset (73,000+ images) analysis using Python, R, AWS and Azure
+- Conducted representational topology analysis on 30,000 fMRI beta value entries across 7 brain ROIs
+- Visualized results through heatmaps, Vietoris-Rips graphs, and persistence diagrams to test the hypothesis
+- Stress-tested pipelines across environments (OS, RAM) and maintained clean, reproducible code in GitHub
+- Mentored undergraduate students on dataset workflows and automation systems to support lab scalability
+- Selected as student speaker to present findings at the 47th Annual McGill Ophthalmology Research Day
+
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/nsd/onenote.png"
+    alt="record of my workflowt"
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>Record of my workflow</Gray>
+</div>
+
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/nsd/poster.png"
+    alt="Poster presentation for my research project"
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>
+    Poster presentation for my research project, McGill Cognitive Science Poster
+    Fair, and McGill Ophthalmology Day
+  </Gray>
+</div>
+
+This project deepened my expertise in <Green>computational neuroscience</Green> and scalable <Green>analysis pipelines</Green>, while reinforcing my interest in bridging cognitive theory, neural data, and computational tools.
