--- a/src/data/projects/manga.mdx
+++ b/src/data/projects/manga.mdx
@@ -223,8 +223,8 @@ Paintings inspired by friendships and shared experiences in real life
 
 
 # Illustrations & Design Work 
-Beyond fanart and original characters, I’ve also applied my visual style to real-world design needs.  
-From poster illustrations to a full magazine layout, these projects taught me how to balance creativity with storytelling — making visuals not only eye-catching but also show a flow of mind.  
+Beyond fanart and original characters, I’ve also applied my visual style to <Green>real-world design needs</Green>.  
+From poster illustrations to a full magazine layout, these projects taught me how to balance creativity with storytelling — making visuals not only eye-catching but also show a flow of ideas.  
 
 <div className="flex gap-5">
   <div className="flex flex-col gap-5">
@@ -292,7 +292,7 @@ From poster illustrations to a full magazine layout, these projects taught me ho
     <source src="/videos/magazine.webm" type="video/webm" />
     <source src="/videos/magazine.mp4" type="video/mp4" />
   </video>
-<Gray>Responsible for end-to-end layout design of school’s annual magazine (8 authors)</Gray>
+<Gray>Responsible for end-to-end layout design of high school’s annual magazine (8 authors)</Gray>
 </div>
 
 # Storytelling Without Borders
