--- a/src/data/projects/manga.mdx
+++ b/src/data/projects/manga.mdx
@@ -231,9 +231,10 @@ From poster illustrations to a full magazine layout, these projects taught me ho
     <Image
       src="/images/mdx/manga/illustration1.png"
       alt=""
-      width={1000}
-      height={600}
+      width={300}
+      height={300}
       draggable={false}
+      className="w-auto h-[300px] object-contain"
     />
   </div>
   <div className="flex flex-col gap-5">
