--- a/src/data/projects/nord.mdx
+++ b/src/data/projects/nord.mdx
@@ -9,6 +9,19 @@ import Image from "next/image";
 2.  <Green>Usability & Maintenance</Green> – The site lacked clarity for visitors
     and was difficult for the team to update.
 
+<div className="flex flex-col gap-5">
+  <Image
+    src="/images/mdx/nord/transform.png"
+    alt=""
+    width={1000}
+    height={600}
+    draggable={false}
+  />
+  <Gray>
+    An example screenshot showing ideas behind each website element transformation
+  </Gray>
+</div>
+
 ## Rebranding & Redesign
 
 <div className="flex flex-col gap-5">
@@ -37,8 +50,8 @@ import Image from "next/image";
 
 <div className="flex flex-col gap-5">
   <Image
-    src="/images/mdx/nord/wipdesign.png"
-    alt="Figma mockups for Nord"
+    src="/images/mdx/nord/transform2.png"
+    alt="Sitemap for Nord"
     width={1000}
     height={600}
     draggable={false}
@@ -55,7 +68,8 @@ import Image from "next/image";
     alt="Design System for Nord"
     width={1000}
     height={600}
-    draggable={false}
+        draggable={false}
+    
   />
   <Gray>Design System 0 -> 1 (growing)</Gray>
 </div>
