--- a/src/data/projects/pearl.mdx
+++ b/src/data/projects/pearl.mdx
@@ -41,7 +41,7 @@ import Image from "next/image";
     height={600}
     draggable={false}
   />
-  <Gray>Maintaining a design system (WIP)</Gray>
+  <Gray>Created and maintained a design system (WIP)</Gray>
 </div>
 
 <div className="flex flex-col gap-5">
@@ -52,5 +52,5 @@ import Image from "next/image";
     height={600}
     draggable={false}
   />
-  <Gray>Website design in progress</Gray>
+  <Gray>Screenshot of landing page design iterations (WIP)</Gray>
 </div>
